// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SellPopoverContent renders correctly diff < 0 1`] = `
<div>
  <div
    class="css-1wjy6p3"
  >
    <div
      class="css-17xejub"
    />
    <div
      class="chakra-container css-11uhf22"
    >
      <h2
        class="chakra-heading css-xi606m"
      >
        Are you sure you want to modify 
        <i
          class="chakra-text css-0"
        >
          Test NFT
        </i>
        ?
      </h2>
    </div>
    <div
      class="css-17xejub"
    />
    <div
      class="css-gmuwbf"
    >
      <div
        class="chakra-table__container css-zipzvv"
      >
        <table
          class="chakra-table css-0"
        >
          <thead
            class="css-0"
          >
            <tr
              class="css-0"
            >
              <th
                class="css-0"
              >
                <p
                  class="chakra-text css-xi606m"
                >
                  Actual Price
                </p>
              </th>
              <th
                class="css-0"
              />
              <th
                class="css-0"
              >
                <p
                  class="chakra-text css-xi606m"
                >
                  New Price
                </p>
              </th>
            </tr>
          </thead>
          <tbody
            class="css-0"
          >
            <tr
              class="css-0"
            >
              <td
                class="css-0"
              >
                <div
                  class="css-gmuwbf"
                  dir="column"
                >
                  <div
                    class="chakra-numberinput css-e69dqy"
                    value="0.4"
                  >
                    <input
                      aria-valuemax="9007199254740991"
                      aria-valuemin="-9007199254740991"
                      aria-valuenow="0.4"
                      aria-valuetext="0.4"
                      autocomplete="off"
                      autocorrect="off"
                      class="chakra-numberinput__field css-fzwid6"
                      disabled=""
                      inputmode="decimal"
                      pattern="[0-9]*(.[0-9]+)?"
                      role="spinbutton"
                      type="text"
                      value="0.4"
                    />
                  </div>
                  <p
                    class="chakra-text css-td3r9l"
                  >
                    eth
                  </p>
                </div>
              </td>
              <td
                class="css-0"
              >
                <b
                  class="chakra-text css-1plnjxl"
                >
                  -50.00
                   %
                </b>
                <div
                  class="css-gmuwbf"
                >
                  <svg
                    color="red"
                    fill="currentColor"
                    height="2em"
                    stroke="currentColor"
                    stroke-width="0"
                    style="color: red;"
                    viewBox="0 0 448 512"
                    width="2em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M313.941 216H12c-6.627 0-12 5.373-12 12v56c0 6.627 5.373 12 12 12h301.941v46.059c0 21.382 25.851 32.09 40.971 16.971l86.059-86.059c9.373-9.373 9.373-24.569 0-33.941l-86.059-86.059c-15.119-15.119-40.971-4.411-40.971 16.971V216z"
                    />
                  </svg>
                </div>
              </td>
              <td
                class="css-0"
              >
                <div
                  class="css-gmuwbf"
                  dir="column"
                >
                  <div
                    class="chakra-numberinput css-e69dqy"
                  >
                    <input
                      aria-valuemax="9007199254740991"
                      aria-valuemin="0"
                      aria-valuenow="0.4"
                      aria-valuetext="0.40"
                      autocomplete="off"
                      autocorrect="off"
                      class="chakra-numberinput__field css-fzwid6"
                      data-testid="price-input"
                      inputmode="decimal"
                      pattern="[0-9]*(.[0-9]+)?"
                      role="spinbutton"
                      type="text"
                      value="0.40"
                    />
                  </div>
                  <p
                    class="chakra-text css-td3r9l"
                  >
                    eth
                  </p>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="css-17xejub"
    />
    <div
      data-testid="PriceDistribution"
    />
    <div
      class="css-17xejub"
    />
    <div
      class="css-1en42kf"
    >
      <div
        class="chakra-button__group css-s2zvk0"
        data-orientation="horizontal"
        role="group"
      >
        <button
          class="chakra-button css-ha7ah3"
          data-testid="onClick-button"
          style="white-space: initial;"
          type="button"
        >
          Modify price
        </button>
        <button
          class="chakra-button css-lnz0i6"
          data-testid="onClick-button"
          style="white-space: initial;"
          type="button"
        >
          Cancel
        </button>
      </div>
    </div>
    <div
      class="css-17xejub"
    />
  </div>
</div>
`;

exports[`SellPopoverContent renders correctly diff > 0 1`] = `
<div>
  <div
    class="css-1wjy6p3"
  >
    <div
      class="css-17xejub"
    />
    <div
      class="chakra-container css-11uhf22"
    >
      <h2
        class="chakra-heading css-xi606m"
      >
        Are you sure you want to modify 
        <i
          class="chakra-text css-0"
        >
          Test NFT
        </i>
        ?
      </h2>
    </div>
    <div
      class="css-17xejub"
    />
    <div
      class="css-gmuwbf"
    >
      <div
        class="chakra-table__container css-zipzvv"
      >
        <table
          class="chakra-table css-0"
        >
          <thead
            class="css-0"
          >
            <tr
              class="css-0"
            >
              <th
                class="css-0"
              >
                <p
                  class="chakra-text css-xi606m"
                >
                  Actual Price
                </p>
              </th>
              <th
                class="css-0"
              />
              <th
                class="css-0"
              >
                <p
                  class="chakra-text css-xi606m"
                >
                  New Price
                </p>
              </th>
            </tr>
          </thead>
          <tbody
            class="css-0"
          >
            <tr
              class="css-0"
            >
              <td
                class="css-0"
              >
                <div
                  class="css-gmuwbf"
                  dir="column"
                >
                  <div
                    class="chakra-numberinput css-e69dqy"
                    value="0.4"
                  >
                    <input
                      aria-valuemax="9007199254740991"
                      aria-valuemin="-9007199254740991"
                      aria-valuenow="0.4"
                      aria-valuetext="0.4"
                      autocomplete="off"
                      autocorrect="off"
                      class="chakra-numberinput__field css-fzwid6"
                      disabled=""
                      inputmode="decimal"
                      pattern="[0-9]*(.[0-9]+)?"
                      role="spinbutton"
                      type="text"
                      value="0.4"
                    />
                  </div>
                  <p
                    class="chakra-text css-td3r9l"
                  >
                    eth
                  </p>
                </div>
              </td>
              <td
                class="css-0"
              >
                <b
                  class="chakra-text css-ggdrs2"
                >
                  50.00
                   %
                </b>
                <div
                  class="css-gmuwbf"
                >
                  <svg
                    color="green"
                    fill="currentColor"
                    height="2em"
                    stroke="currentColor"
                    stroke-width="0"
                    style="color: green;"
                    viewBox="0 0 448 512"
                    width="2em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M313.941 216H12c-6.627 0-12 5.373-12 12v56c0 6.627 5.373 12 12 12h301.941v46.059c0 21.382 25.851 32.09 40.971 16.971l86.059-86.059c9.373-9.373 9.373-24.569 0-33.941l-86.059-86.059c-15.119-15.119-40.971-4.411-40.971 16.971V216z"
                    />
                  </svg>
                </div>
              </td>
              <td
                class="css-0"
              >
                <div
                  class="css-gmuwbf"
                  dir="column"
                >
                  <div
                    class="chakra-numberinput css-e69dqy"
                  >
                    <input
                      aria-valuemax="9007199254740991"
                      aria-valuemin="0"
                      aria-valuenow="0.4"
                      aria-valuetext="0.40"
                      autocomplete="off"
                      autocorrect="off"
                      class="chakra-numberinput__field css-fzwid6"
                      data-testid="price-input"
                      inputmode="decimal"
                      pattern="[0-9]*(.[0-9]+)?"
                      role="spinbutton"
                      type="text"
                      value="0.40"
                    />
                  </div>
                  <p
                    class="chakra-text css-td3r9l"
                  >
                    eth
                  </p>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="css-17xejub"
    />
    <div
      data-testid="PriceDistribution"
    />
    <div
      class="css-17xejub"
    />
    <div
      class="css-1en42kf"
    >
      <div
        class="chakra-button__group css-s2zvk0"
        data-orientation="horizontal"
        role="group"
      >
        <button
          class="chakra-button css-ha7ah3"
          data-testid="onClick-button"
          style="white-space: initial;"
          type="button"
        >
          Modify price
        </button>
        <button
          class="chakra-button css-lnz0i6"
          data-testid="onClick-button"
          style="white-space: initial;"
          type="button"
        >
          Cancel
        </button>
      </div>
    </div>
    <div
      class="css-17xejub"
    />
  </div>
</div>
`;
